# AutoMeKin2020

./: AUTHORS  Makefile.am  README  README.md  configure  configure.ac  install-required-packages-centos7.sh  install-required-packages-sl7.sh  license.txt
scripts/: AMK_parameters.py  ConnectTools.py  FormulaPROD.sh  Makefile.am  amk.sh  amk_parallel.sh  bxde.py  bxde_old.py  check_vdw_atoms.py  compare_minfailed_with_other_minima_ll.sh  conf_isomer_ts.sh  createMat.py  diff.sh  getminfminr.sh  identifyprod.sh  irc.sh  kmc.sh  llcalcs.sh  mopacamk.py  nx.sh  remove_ts.sh  runAS.sh  runGP.sh  rxn_network1.sh  screening.sh  screening_assoc.sh  sort_assoc.sh  thermochem.py  tsll_view.sh  utils.sh
scripts/CATscripts/: FormulaPROD_ef.sh  fl_frag.sh
scripts/HLscripts/: BARRLESSRXN1.sh  BARRLESSRXN2.sh  IDENTIFYPROD.sh  IRC_ANALYSIS.sh  KMC.sh  MIN.sh  Makefile.am  PRODs.sh  REMOVE_TS.sh  RXN_NETWORK1.sh  SORT.sh  get_NM_g09_molden.sh  get_geom_g09.sh  get_geom_irc_g09.sh  get_minfminr_g09.sh  linked_paths.sh  reduce_RXNet.py
share/: list_of_vdw_radii
singularity/: amk2020v1.def
singularity/installer/: build  decompress
singularity/installer/payload/: Singularity-3.5.2.eb  Squashfs-4.3.eb  amk_installer  installer  singularity_compilation.txt
tags/2020/: Makefile.am  README.md  install-required-packages-ubuntu-16.4lts.sh  license.txt
tags/2020/examples/: Makefile.am
tags/2020/modules/: Makefile.am
tags/2020/scripts/: Connectivity.py  FormulaMOL.sh  Makefile.am  amk.sh  amk_parallel.sh  bxde.py  createMat.py  createthdist.py  final.sh  get_minn.sh  kinetics.sh  (+19 more)
(+15 files in other folders)
