dist_bin_SCRIPTS = chemical_formula.sh \
	      createMat.py createthdist.py \
	      deg_form.sh deg.sh diffGT.sh FormulaMOL.sh \
	      diff.sh format.sh FormulaPROD.sh get_freq_mopac.sh \
	      get_geom_mopac.sh getminfminr.sh get_minn.sh  \
	      identifyprod.sh initialqv_mopac_samp1.sh \
	      initialqv_mopac_samp2.sh irc_analysis.sh irc.sh kmc.sh \
	      minandprod.sh min.sh mopac_freq_ts.sh ntraj.sh \
	      plot_relevant.sh  \
	      reduce3.sh reduce2.sh reduce.sh runAS.sh runGP.sh \
	      runirc.sh runmin.sh rxn_network1.sh rxn_network.sh \
	      select_assoc.sh sel_mol.sh \
	      simplifyRXN.sh snapshots_mopac.sh sort_assoc.sh sort.sh \
	      screening_assoc.sh screening.sh symm.sh \
	      thermochem.py tors.sh amk_parallel.sh amk.sh \
	      utils.sh llcalcs.sh final.sh get_NM_mopac.sh get_geom_thermo_mopac.sh  \
              conf_isomer_ts.sh tsll_view.sh track_view.sh \
              select.sh redo_screening.sh  kinetics.sh \
              slurm_settings_ft2.sh abort.sh remove_ts.sh run_test.sh nx.sh \
              rxn.py track.py Langevin.py \
              bxde.py check_vdw_atoms.py bots.py mopacamk.py


